--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "trained_models": "",
-  "data_path": "",
+  "trained_models": "/models",
+  "data_path": "/data",
   "card_types": ["spell", "monster", "normal_monster", "trap", "fusion", "ritual"],
   "monster": {
     "colors": 0,
