--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "trained_models": "/models",
   "data_path": "/data",
+  "webcam": 0,
   "card_types": ["spell", "monster", "normal_monster", "trap", "fusion", "ritual"],
   "monster": {
     "colors": 0,
